--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@
 #spring.datasource.password=FRJinwooTester784
 #
 #spring.jpa.hibernate.ddl-auto=update
+
+server.forward-headers-strategy=FRAMEWORK
